# fiducial-playground

./: .gitignore  CMakeLists.txt  build.gradle
.github/workflows/: main.yml
app/: CMakeLists.txt
app/aruco/: aruco_nano.h  aruco_nano_v4.h  nanofractal.h
app/src/: main.cpp
shared/: common.gradle  config.gradle
shared/javacpp/: setupBuild.gradle
src/main/java/org/photonvision/: ArucoNanoV5Detector.java
src/main/native/cpp/: main.cpp
src/main/native/include/: aruco_nano.h  aruco_nano_v4.h  nanofractal.h
src/main/native/jni/: ArucoNanoJni.cpp
src/test/java/org/photonvision/: DetectorTest.java
src/test/native/cpp/: GTestMain.cpp
